policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: Images using the latest tag are disallowed.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - edge-pune
                - edge-mumbai
                - edge-bangalore
                - kubesentinel-system
      validate:
        message: "Using ':latest' tag is disallowed for project workloads."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
