policies/kyverno/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: Privilege escalation must be explicitly disallowed.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - edge-pune
                - edge-mumbai
                - edge-bangalore
                - kubesentinel-system
      validate:
        message: "Privilege escalation is disallowed. allowPrivilegeEscalation must be false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
